Added swagger documentation. Broke up one huge yml to several smaller one. You bundle them up by running npm run openapi:gen from the backend. Changed route for registerStudent so it's consistent.
